--- a/public/temp.html
+++ b/public/temp.html
@@ -43,14 +43,14 @@
             </div>
             <div style="margin-top: 1rem;">
                 <h5 style="font-size: 18px; line-height: 26px; color: #fff; font-weight: 500; margin: 0;">
-                    GGIC
+                    GIC
                 </h5>
             </div>
             <div style="margin-top: .5rem; padding: 0 1rem;">
                 <p style="font-size: 14px; font-weight: 400; line-height: 26px; color: #fff;">
                     This certificate is proudly presented to <span
                         style="font-weight: 600; font-size: 1.5rem; color: #DAB561; font-family: Briem Hand;">
-                        Poonam
+                        Pradeep
                     </span>
                     for achieving First Place at the 2024 Annual School Chess Championships. Your exceptional skill,
                     dedication, and sportsmanship have earned you this prestigious honor.
@@ -75,7 +75,7 @@
                         </td>
                         <td style="width: 30%; text-align: center;">
                             <div style="color: white; font-size: 16px;">
-                                14/2/2025
+                                17/2/2025
                             </div>
                             <p style="border-top: 1px solid #fff; font-weight: 400; font-size: 16px; color: #fff;">Date
                             </p>
